--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "dependencies": {
     "prop-types": "^15.7.2",
+    "rc-drawer": "^1.7.7",
     "react": "^16.8.3",
+    "react-compare-image": "^1.1.0",
     "react-dom": "^16.8.3",
     "react-icons": "^3.5.0",
     "react-modal": "^3.8.1",
     "react-player": "^1.9.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "react-sidebar": "^3.0.2",
     "styled-components": "^4.1.3"
   },
   "scripts": {
