--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "rc-drawer": "^1.7.7",
     "react": "^16.8.3",
     "react-compare-image": "^1.1.0",
+    "react-device-detect": "^1.6.2",
     "react-dom": "^16.8.3",
     "react-icons": "^3.5.0",
     "react-modal": "^3.8.1",
     "react-player": "^1.9.3",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8",
+    "react-scripts": "^3.0.0",
     "react-sidebar": "^3.0.2",
     "styled-components": "^4.1.3"
   },
