--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "lru-cache": "^5.1.1",
+    "md5": "^2.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-device-detect": "^1.6.2",
